ecmascript/parser/tests/test262-error-references/fail/4ef1d6ca8eceb313.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/4ef1d6ca8eceb313.js:1:26
  |
1 | function* f() { [yield* {a = 0}]; }
  |                          ^^^^^

